# TDT4195-Visual-Computing

./: .gitignore  README.md
Assignment_1/: Assignment_1.docx
Assignment_1/gloom-rs/: Cargo.toml  README.md
Assignment_1/gloom-rs/shaders/: simple.vert
Assignment_2/gloom-rs/: README.md
Assignment_2/gloom-rs/shaders/: simple.frag  simple.vert
Assignment_2/gloom-rs/src/: main.rs
Assignment_3/gloom-rs/: README.md
Assignment_3/gloom-rs/shaders/: simple.frag  simple.vert
Assignment_3/gloom-rs/src/: main.rs  mesh.rs  scene_graph.rs  toolbox.rs
graphics/: README.md
graphics/Assignment_1/gloom-rs/shaders/: simple.frag
graphics/Assignment_1/gloom-rs/src/: main.rs
graphics/Assignment_3/gloom-rs/src/: main.rs  shader.rs
image_processing/: README.md
image_processing/assignment_1/: .gitignore  README.md  task2ab.ipynb  task2ab.py  task2c.ipynb  task2c.py  task4.ipynb  task4.py  task4a.py  task4b.py  task4c.py  trainer.py
image_processing/assignment_2/: README.MD  report.md  task2.py  task2c.py  task4a.py  task4b.py  task4c.py  task4d.py  utils.py
image_processing/assignment_3/: create_submission_zip.py  open_closing.py  task2a.py  task2b.py  task3a.py  task3b.py  task3c.py  task3d.py
